RESOLVED FIXED214237
Building AccessibilitySupportSPI with the macOS Big Sur public SDK fails
https://bugs.webkit.org/show_bug.cgi?id=214237
Summary Building AccessibilitySupportSPI with the macOS Big Sur public SDK fails
Rob Buis
Reported 2020-07-12 11:18:42 PDT
/Users/rwlbuis/work/WebKit/WebKitBuild/Release/usr/local/include/pal/spi/cocoa/AccessibilitySupportSPI.h:37:26: error: unknown type name 'AXSIsolatedTreeMode' typedef CF_ENUM(int32_t, AXSIsolatedTreeMode) ^ /Users/rwlbuis/work/WebKit/WebKitBuild/Release/usr/local/include/pal/spi/cocoa/AccessibilitySupportSPI.h:38:1: error: function definition declared 'typedef' { ^ /Users/rwlbuis/work/WebKit/WebKitBuild/Release/usr/local/include/pal/spi/cocoa/AccessibilitySupportSPI.h:37:9: error: C++ requires a type specifier for all declarations typedef CF_ENUM(int32_t, AXSIsolatedTreeMode) ~~~~~~~ ^ /Users/rwlbuis/work/WebKit/WebKitBuild/Release/usr/local/include/pal/spi/cocoa/AccessibilitySupportSPI.h:39:5: error: use of undeclared identifier 'AXSIsolatedTreeModeOff' AXSIsolatedTreeModeOff = 0, ^ /Users/rwlbuis/work/WebKit/WebKitBuild/Release/usr/local/include/pal/spi/cocoa/AccessibilitySupportSPI.h:40:5: error: use of undeclared identifier 'AXSIsolatedTreeModeMainThread' AXSIsolatedTreeModeMainThread, ^ /Users/rwlbuis/work/WebKit/WebKitBuild/Release/usr/local/include/pal/spi/cocoa/AccessibilitySupportSPI.h:41:5: error: use of undeclared identifier 'AXSIsolatedTreeModeSecondaryThread' AXSIsolatedTreeModeSecondaryThread, ^ /Users/rwlbuis/work/WebKit/WebKitBuild/Release/usr/local/include/pal/spi/cocoa/AccessibilitySupportSPI.h:44:1: error: unknown type name 'AXSIsolatedTreeMode' AXSIsolatedTreeMode _AXSIsolatedTreeMode(void); ^ /Users/rwlbuis/work/WebKit/WebKitBuild/Release/usr/local/include/pal/spi/cocoa/AccessibilitySupportSPI.h:45:30: error: use of undeclared identifier 'AXSIsolatedTreeMode'; did you mean '_AXSIsolatedTreeMode'? void _AXSSetIsolatedTreeMode(AXSIsolatedTreeMode); ^~~~~~~~~~~~~~~~~~~ _AXSIsolatedTreeMode /Users/rwlbuis/work/WebKit/WebKitBuild/Release/usr/local/include/pal/spi/cocoa/AccessibilitySupportSPI.h:44:21: note: '_AXSIsolatedTreeMode' declared here AXSIsolatedTreeMode _AXSIsolatedTreeMode(void); ^ /Users/rwlbuis/work/WebKit/WebKitBuild/Release/usr/local/include/pal/spi/cocoa/AccessibilitySupportSPI.h:45:6: error: variable has incomplete type 'void' void _AXSSetIsolatedTreeMode(AXSIsolatedTreeMode); ^ In file included from /Users/rwlbuis/work/WebKit/Source/WebCore/PAL/pal/spi/cocoa/AccessibilitySupportSoftLink.cpp:27: In file included from /Users/rwlbuis/work/WebKit/Source/WebCore/PAL/pal/spi/cocoa/AccessibilitySupportSoftLink.h:28: /Users/rwlbuis/work/WebKit/WebKitBuild/Release/usr/local/include/pal/spi/cocoa/AccessibilitySupportSPI.h:37:26: error: unknown type name 'AXSIsolatedTreeMode' typedef CF_ENUM(int32_t, AXSIsolatedTreeMode) ^ /Users/rwlbuis/work/WebKit/WebKitBuild/Release/usr/local/include/pal/spi/cocoa/AccessibilitySupportSPI.h:38:1: error: function definition declared 'typedef' { ^ /Users/rwlbuis/work/WebKit/WebKitBuild/Release/usr/local/include/pal/spi/cocoa/AccessibilitySupportSPI.h:37:9: error: C++ requires a type specifier for all declarations typedef CF_ENUM(int32_t, AXSIsolatedTreeMode) ~~~~~~~ ^ /Users/rwlbuis/work/WebKit/WebKitBuild/Release/usr/local/include/pal/spi/cocoa/AccessibilitySupportSPI.h:39:5: error: use of undeclared identifier 'AXSIsolatedTreeModeOff' AXSIsolatedTreeModeOff = 0, ^ /Users/rwlbuis/work/WebKit/WebKitBuild/Release/usr/local/include/pal/spi/cocoa/AccessibilitySupportSPI.h:40:5: error: use of undeclared identifier 'AXSIsolatedTreeModeMainThread' AXSIsolatedTreeModeMainThread, ^ /Users/rwlbuis/work/WebKit/WebKitBuild/Release/usr/local/include/pal/spi/cocoa/AccessibilitySupportSPI.h:41:5: error: use of undeclared identifier 'AXSIsolatedTreeModeSecondaryThread' AXSIsolatedTreeModeSecondaryThread, ^ /Users/rwlbuis/work/WebKit/WebKitBuild/Release/usr/local/include/pal/spi/cocoa/AccessibilitySupportSPI.h:44:1: error: unknown type name 'AXSIsolatedTreeMode' AXSIsolatedTreeMode _AXSIsolatedTreeMode(void); ^ /Users/rwlbuis/work/WebKit/WebKitBuild/Release/usr/local/include/pal/spi/cocoa/AccessibilitySupportSPI.h:45:30: error: use of undeclared identifier 'AXSIsolatedTreeMode'; did you mean '_AXSIsolatedTreeMode'? void _AXSSetIsolatedTreeMode(AXSIsolatedTreeMode); ^~~~~~~~~~~~~~~~~~~ _AXSIsolatedTreeMode /Users/rwlbuis/work/WebKit/WebKitBuild/Release/usr/local/include/pal/spi/cocoa/AccessibilitySupportSPI.h:44:21: note: '_AXSIsolatedTreeMode' declared here AXSIsolatedTreeMode _AXSIsolatedTreeMode(void); ^ /Users/rwlbuis/work/WebKit/WebKitBuild/Release/usr/local/include/pal/spi/cocoa/AccessibilitySupportSPI.h:45:6: error: variable has incomplete type 'void' void _AXSSetIsolatedTreeMode(AXSIsolatedTreeMode); ^ In file included from /Users/rwlbuis/work/WebKit/Source/WebCore/PAL/pal/spi/cocoa/AccessibilitySupportSoftLink.cpp:27: /Users/rwlbuis/work/WebKit/Source/WebCore/PAL/pal/spi/cocoa/AccessibilitySupportSoftLink.h:36:85: error: unknown type name 'AXSIsolatedTreeMode' SOFT_LINK_FUNCTION_MAY_FAIL_FOR_HEADER(PAL, libAccessibility, _AXSIsolatedTreeMode, AXSIsolatedTreeMode, (void), ()) ^ /Users/rwlbuis/work/WebKit/Source/WebCore/PAL/pal/spi/cocoa/AccessibilitySupportSoftLink.h:36:85: error: unknown type name 'AXSIsolatedTreeMode' /Users/rwlbuis/work/WebKit/Source/WebCore/PAL/pal/spi/cocoa/AccessibilitySupportSoftLink.h:36:85: error: unknown type name 'AXSIsolatedTreeMode' /Users/rwlbuis/work/WebKit/Source/WebCore/PAL/pal/spi/cocoa/AccessibilitySupportSoftLink.cpp:32:97: error: unknown type name 'AXSIsolatedTreeMode' SOFT_LINK_FUNCTION_MAY_FAIL_FOR_SOURCE_WITH_EXPORT(PAL, libAccessibility, _AXSIsolatedTreeMode, AXSIsolatedTreeMode, (void), (), PAL_EXPORT) ^ /Users/rwlbuis/work/WebKit/Source/WebCore/PAL/pal/spi/cocoa/AccessibilitySupportSoftLink.cpp:32:97: error: unknown type name 'AXSIsolatedTreeMode' /Users/rwlbuis/work/WebKit/Source/WebCore/PAL/pal/spi/cocoa/AccessibilitySupportSoftLink.cpp:32:1: error: expected expression SOFT_LINK_FUNCTION_MAY_FAIL_FOR_SOURCE_WITH_EXPORT(PAL, libAccessibility, _AXSIsolatedTreeMode, AXSIsolatedTreeMode, (void), (), PAL_EXPORT) ^ In file included from /Users/rwlbuis/work/WebKit/Source/WebCore/PAL/pal/spi/cocoa/AccessibilitySupportSoftLink.cpp:27: In file included from /Users/rwlbuis/work/WebKit/Source/WebCore/PAL/pal/spi/cocoa/AccessibilitySupportSoftLink.h:29: In file included from /Users/rwlbuis/work/WebKit/WebKitBuild/Release/usr/local/include/wtf/SoftLinking.h:28: /Users/rwlbuis/work/WebKit/WebKitBuild/Release/usr/local/include/wtf/cocoa/SoftLinking.h:554:59: note: expanded from macro 'SOFT_LINK_FUNCTION_MAY_FAIL_FOR_SOURCE_WITH_EXPORT' softLink##framework##functionName = (resultType (*) parameterDeclarations) dlsym(framework##Library(), #functionName); \ ^ /Users/rwlbuis/work/WebKit/Source/WebCore/PAL/pal/spi/cocoa/AccessibilitySupportSoftLink.cpp:32:123: error: expected '(' for function-style cast or type construction SOFT_LINK_FUNCTION_MAY_FAIL_FOR_SOURCE_WITH_EXPORT(PAL, libAccessibility, _AXSIsolatedTreeMode, AXSIsolatedTreeMode, (void), (), PAL_EXPORT) ~~~~^ In file included from /Users/rwlbuis/work/WebKit/Source/WebCore/PAL/pal/spi/cocoa/AccessibilitySupportSoftLink.cpp:27: In file included from /Users/rwlbuis/work/WebKit/Source/WebCore/PAL/pal/spi/cocoa/AccessibilitySupportSoftLink.h:29: In file included from /Users/rwlbuis/work/WebKit/WebKitBuild/Release/usr/local/include/wtf/SoftLinking.h:28: /Users/rwlbuis/work/WebKit/WebKitBuild/Release/usr/local/include/wtf/cocoa/SoftLinking.h:554:61: note: expanded from macro 'SOFT_LINK_FUNCTION_MAY_FAIL_FOR_SOURCE_WITH_EXPORT' softLink##framework##functionName = (resultType (*) parameterDeclarations) dlsym(framework##Library(), #functionName); \ ^~~~~~~~~~~~~~~~~~~~~ /Users/rwlbuis/work/WebKit/Source/WebCore/PAL/pal/spi/cocoa/AccessibilitySupportSoftLink.cpp:32:97: error: unknown type name 'AXSIsolatedTreeMode' SOFT_LINK_FUNCTION_MAY_FAIL_FOR_SOURCE_WITH_EXPORT(PAL, libAccessibility, _AXSIsolatedTreeMode, AXSIsolatedTreeMode, (void), (), PAL_EXPORT) ^ /Users/rwlbuis/work/WebKit/Source/WebCore/PAL/pal/spi/cocoa/AccessibilitySupportSoftLink.cpp:32:97: error: unknown type name 'AXSIsolatedTreeMode' 18 errors generated.
Attachments
Patch (1.38 KB, patch)
2020-07-12 12:42 PDT, Rob Buis
no flags
Patch (1.33 KB, patch)
2020-07-13 01:51 PDT, Rob Buis
no flags
Patch (3.69 KB, patch)
2020-07-13 08:17 PDT, Rob Buis
no flags
Rob Buis
Comment 1 2020-07-12 12:42:12 PDT
Rob Buis
Comment 2 2020-07-13 01:51:15 PDT
Rob Buis
Comment 3 2020-07-13 06:29:40 PDT
Another accessibility build error: In file included from ./accessibility/AXObjectCache.cpp:110: PAL/pal/spi/mac/HIServicesSPI.h:128:1: error: unknown type name 'AXError'; did you mean 'CGError'? AXError _AXUIElementUseSecondaryAXThread(bool enabled); ^~~~~~~ CGError In file included from /Users/rwlbuis/work/WebKit/WebKitBuild/Release/DerivedSources/WebCore/unified-sources/UnifiedSource69.cpp:1: In file included from /Users/rwlbuis/work/WebKit/Source/WebCore/WebCorePrefix.h:87: In file included from /Applications/Xcode-beta.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.16.sdk/System/Library/Frameworks/CoreGraphics.framework/Headers/CoreGraphics.h:18: /Applications/Xcode-beta.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.16.sdk/System/Library/Frameworks/CoreGraphics.framework/Headers/CGError.h:16:27: note: 'CGError' declared here typedef CF_ENUM (int32_t, CGError) { ^ 1 error generated.
Rob Buis
Comment 4 2020-07-13 08:17:33 PDT
EWS
Comment 5 2020-07-15 11:17:49 PDT
Committed r264407: <https://trac.webkit.org/changeset/264407> All reviewed patches have been landed. Closing bug and clearing flags on attachment 404147 [details].
Radar WebKit Bug Importer
Comment 6 2020-07-15 11:18:16 PDT
Note You need to log in before you can comment on or make changes to this bug.