Building AccessibilitySupportSPI with the macOS Big Sur public SDK fails https://bugs.webkit.org/show_bug.cgi?id=214237

Patch by Rob Buis <rbuis@igalia.com> on 2020-07-15
Reviewed by Alex Christensen.

Source/WebCore/PAL:

We need to include CoreFoundation.h header here to use CF_ENUM, since
we can't rely on the call site that includes AccessibilitySupportSPI.h
doing it for us.
We also need to declare _AXSetClientIdentificationOverride since it
it is used by AccessibilityController.cpp.

* pal/spi/cocoa/AccessibilitySupportSPI.h:
* pal/spi/mac/HIServicesSPI.h:

Source/WebKit:

Need to include HIServicesSPI.h for _AXUIElementRequestServicedBySecondaryAXThread.

* WebProcess/WebPage/mac/WKAccessibilityWebPageObjectMac.mm:

Canonical link: https://commits.webkit.org/227160@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264407 268f45cc-cd09-0410-ab3c-d52691b4dbfc